# ros2-cicd

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
argocd/: application.yaml
backend/: app.py  requirements-dev.txt  requirements.txt  ros_bridge.py
backend/tests/: test_app.py  test_health.py  test_ros_bridge.py
docker/: backend.Dockerfile  frontend.Dockerfile  print_url.sh  ros2.Dockerfile  start_backend.sh  start_ros.sh
docs/: CD-pipeline-strategy.md  CD-pipeline-tools.md  CI-CD-pipeline-infographic.html  CI-pipeline_overview.md
docs/screenshots/: argocd-status.txt  kubectl-pods.txt
frontend/: app.js  index.html  styles.css
helm/ros2-cicd/: Chart.yaml  values.yaml
helm/ros2-cicd/templates/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  ros2-deployment.yaml  secret.yaml
k8s/: configmap.yaml  ingress.yaml  secrets.yaml
k8s/backend/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
ros2_ws/src/counter_system/: CMakeLists.txt  package.xml
ros2_ws/src/counter_system/src/: publisher_node.cpp  subscriber_node.cpp
