<?xml version="1.0"?>
<package format="3">

  <name>counter_system</name>
  <version>0.0.1</version>

  <description>ROS2 Counter System</description>

  <maintainer email="darshan@example.com">
    Darshan
  </maintainer>

  <license>Apache-2.0</license>

  <!-- Build System -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message / Service Generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ROS Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>